[package]
name = "bmps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib","staticlib","cdylib"]

[dependencies]
flutter_rust_bridge = "1"
kamadak-exif = "*"
#font-kit ={version= "0.12.0", features=["freetype"]}
image = "0.24.7"
imageproc = "0.23.0"
rusttype = "0.9.3"
anyhow = "*"
fastblur = { git = "https://github.com/fschutt/fastblur" }
log = "0.4.20"

[dev-dependencies]
clap = "4.4.11"
env_logger = "0.10.1"
